<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:srcCompat="@drawable/ic_q_a" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/what_best_describes_you"
        android:textColor="@color/color_4"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tap_to_select"
        android:textColor="@color/grey_text"
        android:textSize="15sp"
        android:fontFamily="@font/quicksand_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/color_5"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/next"
        android:textColor="@color/color_4"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/admin"
        app:layout_constraintTop_toBottomOf="@+id/admin" />

    <com.furkanakdemir.surroundcardview.SurroundCardView
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_card"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/admin"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/select"
        app:scv_color="#3C7A79"
        app:scv_duration="500"
        app:scv_startPoint="top_start"
        app:scv_surrounded="false"
        app:scv_width="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_user_icon" />

            <TextView
                android:id="@+id/u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/user"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </LinearLayout>
    </com.furkanakdemir.surroundcardview.SurroundCardView>

    <com.furkanakdemir.surroundcardview.SurroundCardView
        android:id="@+id/admin"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_card"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user"
        app:layout_constraintTop_toBottomOf="@+id/select"
        app:scv_color="#3C7A79"
        app:scv_duration="500"
        app:scv_startPoint="top_start"
        app:scv_surrounded="false"
        app:scv_width="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_admin_icon" />

            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/admin"
                android:textColor="@color/color_1"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </LinearLayout>
    </com.furkanakdemir.surroundcardview.SurroundCardView>
</androidx.constraintlayout.widget.ConstraintLayout>